--- a/.gitignore
+++ b/.gitignore
@@ -37,7 +37,9 @@ local.properties
 node_modules/
 npm-debug.log
 yarn-error.log
-
+google-services.json
+yarn.lock
+packag-lock.json
 # BUCK
 buck-out/
 \.buckd/
