--- a/package.json
+++ b/package.json
@@ -10,19 +10,27 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-community/cameraroll": "^4.1.2",
     "@react-native-community/segmented-control": "^2.2.2",
     "@react-native-community/slider": "^4.3.2",
+    "@react-native-firebase/app": "^16.5.2",
+    "@react-native-firebase/auth": "^16.5.2",
+    "@react-native-firebase/firestore": "^16.5.2",
     "@react-native-picker/picker": "^2.4.7",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/drawer": "^6.5.0",
     "@react-navigation/material-top-tabs": "^6.3.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.0",
+    "axios": "^1.2.4",
     "babel-plugin-module-resolver": "^4.1.0",
+    "lottie-react-native": "^5.1.4",
+    "moment": "^2.29.4",
     "react": "18.1.0",
     "react-native": "0.70.2",
     "react-native-extended-stylesheet": "^0.12.0",
+    "react-native-flash-message": "^0.4.0",
     "react-native-gesture-handler": "^2.7.0",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-pager-view": "^6.0.1",
